recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:7: error: value droite is not a member of Unit
    if (i%2==1){avance(100.00) droite()}}
                               ^FourSquare:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite() 
        ^FourSquare:10: error: not found: value reculer
  reculer (100.0)
  ^FourSquare:11: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^